# unjson-swagger

./: LICENSE  README.md  sample_spec.json  stack.yaml  unjson-swagger.cabal
sample_schemas/: Customer.json  Package.json  Paper.json  PaperCode.json
src/Data/Unjson/: Swagger.hs
test/: Main.hs
